--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color: lightblue;">
 <h1 style="color: blue;">
-My Website
+My Website Project
 
 </h1>
 
@@ -32,3 +32,4 @@ My Cat Pictures
 </body>
 
 </html>
+
