--- a/DofE/Averting Disaster/index.html
+++ b/DofE/Averting Disaster/index.html
@@ -1,1 +1,14 @@
+<html>
+<body style="background-color: lightgreen;">
+
+<h1>Averting Disaster</h1>
+
+<p>This page is about my DofE Averting Disaster project.</p>
+
+<p>
+<a href="../../index.html">⬅ Back to Home</a>
+</p>
+
+</body>
+</html>
 
