--- a/Hobby/Cats/index.html
+++ b/Hobby/Cats/index.html
@@ -1,1 +1,15 @@
+<html>
+<body style="background-color: lightyellow;">
+
+<h1>My Cats</h1>
+
+<img src="../../images/cat1.jpg" width="200">
+<img src="../../images/cat2.jpg" width="200">
+
+<p>
+<a href="../../index.html">⬅ Back to Home</a>
+</p>
+
+</body>
+</html>
 
