--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
+<!DOCTYPE html>
 <html>
-<body style="background-color: lightgreen;">
+<head>
+  <meta charset="UTF-8">
+  <title>Aarav's DoE Website</title>
+</head>
 
-<h1 style="color: blue;">
-Aarav's DoE Website 😀
-</h1>
+<body style="background-color: lightgreen; font-family: Arial, sans-serif;">
 
-<span style="font-size:67px;">🐱</span>
-<span style="font-size:100px;">🐶</span>
+<h1 style="color: blue;">Aarav's DoE Website 😀</h1>
 
 <p>Hello! This is my first website. 🎁 🐱</p>
 
-<img src="../../images/sisters.jpg" width="670" style="float:left;">
-<img src="../../images/mainecoon.jpg" width="670" style="float:right;">
+<!-- Featured cat pictures on home -->
+<img src="images/sisters.jpg" width="300" style="margin-right: 10px;">
+<img src="images/mainecoon.jpg" width="300">
 
-<div style="clear: both;"></div>
+<hr>
 
-<p>
-<a href="../../index.html">⬅ Back to Home</a>
-</p>
+<h2>My Projects</h2>
+
+<ul>
+  <li><a href="Hobby/Cats/index.html">🐱 My Hobby – Cats</a></li>
+  <li><a href="DofE/Averting Disaster/index.html">🏕️ DofE – Averting Disaster</a></li>
+  <li><a href="DofE/First Aid/index.html">🩹 DofE – First Aid</a></li>
+  <li><a href="DofE/My Dream Visit/index.html">✈️ DofE – My Dream Visit</a></li>
+</ul>
 
 </body>
 </html>
