--- a/Hobby/Cats/index.html
+++ b/Hobby/Cats/index.html
@@ -1,15 +1,29 @@
+<!DOCTYPE html>
 <html>
-<body style="background-color: lightyellow;">
+<head>
+  <meta charset="UTF-8">
+  <title>Hobby – Cats</title>
+</head>
 
-<h1>My Cats</h1>
+<body style="background-color: lightyellow; font-family: Arial, sans-serif;">
 
-<img src="../../images/mainecoon.jpg" width="200">
-<img src="../../images/sisters.jpg" width="200">
+<h1>My Hobby – Cats 🐱</h1>
 
-<p>
-<a href="../../index.html">⬅ Back to Home</a>
-</p>
+<p>Here are my favorite cat pictures!</p>
+
+<!-- All cat pics in the same folder -->
+<img src="PXL_20251220_183717590.jpg" width="200">
+<img src="PXL_20251220_183719002.jpg" width="200">
+<img src="PXL_20251224_125807903.jpg" width="200">
+<img src="PXL_20251228_122443630.jpg" width="200">
+<img src="PXL_20251228_122444501.jpg" width="200">
+<img src="PXL_20251228_122554962.jpg" width="200">
+<img src="PXL_20251228_135638244.jpg" width="200">
+
+
+<hr>
+
+<p><a href="../../index.html">⬅ Back to Home</a></p>
 
 </body>
 </html>
-
