--- a/DofE/Averting Disaster/index.html
+++ b/DofE/Averting Disaster/index.html
@@ -7,7 +7,7 @@
 
 <body style="background-color: lightblue; font-family: Arial, sans-serif;">
 
-<h1>Averting Disaster 🏕️</h1>
+<h1>Averting Disaster 🏕️ :)</h1>
 
 <p>Photos and documents for my DofE Averting Disaster project.</p>
 
