--- a/DofE/Happiness/index.html
+++ b/DofE/Happiness/index.html
@@ -7,7 +7,7 @@
 
 <body style="background-color: lightblue; font-family: Arial, sans-serif;">
 
-<h1>Happiness &#127900; &#127900;</h1>
+<h1>Happiness &#127900;</h1>
 
 <p>My musical composition.</p>
 
