--- a/DofE/Happiness/index.html
+++ b/DofE/Happiness/index.html
@@ -7,18 +7,19 @@
 
 <body style="background-color: lightblue; font-family: Arial, sans-serif;">
 
-<h1>Happiness &#127900;</h1>
+<h1>Happiness 🎼</h1>
 
 <p>My musical composition.</p>
 
-<!-- PDF file -->
+<!-- MP3 file -->
 <p>
 <a href="The Dark Forest.mp3" target="_blank">🎶 Listen to my composition</a>
 </p>
 
 <hr>
 
-<p><a href="../../index.html">⬅ Back to Home</a></p>
+<!-- Back to Home -->
+<p><a href="../index.html">⬅ Back to Home</a></p>
 
 </body>
 </html>
