--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
   <li><a href="DofE/Averting Disaster/index.html">🏕️ DofE – Averting Disaster</a></li>
   <li><a href="DofE/First Aid/index.html">🩹 DofE – First Aid</a></li>
   <li><a href="DofE/My Dream Visit/index.html">✈️ DofE – My Dream Visit</a></li>
-   <li><a href="DofE/Happiness/index.html">✈️ DofE – My Dream Visit</a></li>
+  <li><a href="DofE/Happiness/index.html">✈️ DofE – Happiness</a></li>
 </ul>
 
 </body>
 </html>
+
 
