--- a/DofE/My Dream Visit/index.html
+++ b/DofE/My Dream Visit/index.html
@@ -12,8 +12,9 @@
 <p>Here is my DofE Dream Visit presentation.</p>
 
 <p>
-<a href="My Dream Visit Spain.pptx" target="_blank">📄 View Presentation</a>
+  <a href="My Dream Visit Spain.pdf" target="_blank">📄 View Presentation</a>
 </p>
+
 
 <hr>
 
